--- a/ClassDefAutogenerator/ClassDefAutogenerator.csproj
+++ b/ClassDefAutogenerator/ClassDefAutogenerator.csproj
@@ -7,6 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.8.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0005" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0005" />
   </ItemGroup>
 
 </Project>
