--- a/ArkSaveEditor/ArkSaveEditor.csproj
+++ b/ArkSaveEditor/ArkSaveEditor.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="Entities\LowLevel\DotArk\ArkArrayData\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="World\WorldEntities\" />
   </ItemGroup>
 
   <ItemGroup>
